--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,7 @@
 {
+    "name": "Orion-Inc/Swap.io",
+    "type": "application",
+    "description": "",
     "require": {
         "slim/slim": "^3.0",
         "slim/twig-view": "^2.4",
@@ -8,7 +11,8 @@
         "slim/csrf": "^0.8.3",
         "guzzlehttp/guzzle": "^6.3",
         "slim/flash": "^0.4.0",
-        "lcobucci/jwt": "^3.2"
+        "lcobucci/jwt": "3.2.4",
+        "zeuxisoo/slim-whoops": "^0.6.4"
     },
     "autoload": {
         "psr-4": {
